# Medtriage

./: .gitignore  Dockerfile  HF_README.md  LICENSE  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
baseline/: baseline_agent.py  run_baseline.py
environment/: __init__.py  clinical_knowledge.py  env.py  graders.py  models.py  patient_generator.py  tasks.py
server/: app.py
tests/: test_env.py
