[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medtriage-env"
version = "1.0.0"
description = "Emergency Department Clinical Triage and Decision Support Environment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MedTriage Contributors" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "openai>=1.30.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0"
]
